--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
             <div class="form">
                 <label>Stake Amount</label>
                 <input type="number" id="myStake" min="25">
-                <span>Min 25 Avax</span>
+                <div class="small-note">Minimium 25 AVAX required</div>
             </div>
             <div class="form">
                 <label>Staking Duration</label>
                 <input type="number" id="myDays" min="14" max="365">
-                <span>Min 14 Days - Max 1 Year</span>
+                <div class="small-note">Min 14 Days, Max 365 Days</div>
                 
             </div>
             <button class="btn-calc" type="button" onclick="calculate()">Calculate</button>
@@ -33,7 +33,7 @@
 
         <!--Result-->
         <div class="result-card">
-            <h2>Estimated Rewards</h2>
+            <div>Estimated Rewards</div>
             <label id="estimatedReward">0.00</label>
         </div>
 
