--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Avax Apr</title>
-    <link rel="stylesheet" href="../sytle.css">
+    <link rel="stylesheet" href="./sytle.css">
 </head>
 <body>
     <!---main-->
@@ -107,6 +107,6 @@
         
     </main>
 
-    <script src="../script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
