Add price fetching API and update calculations to display USD value

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Avax Apr</title>
-    <link rel="stylesheet" href="/sytle.css">
+    <link rel="stylesheet" href="./sytle.css">
 </head>
 <body>
     <!---main-->
@@ -72,6 +72,8 @@
             <div class="est-reward">
                 <span class="result-label">Estimated Reward </span>
                 <span class="result-val"><span id="estimatedReward">0.00</span> AVAX</span>
+                <!-- Price -->
+                <div id="usdOutput" class="usd-subtext">≈ $0.00</div>
             </div>
             <div class="est-reward">
                 <span class="result-label">Apr(Simple) </span>
@@ -107,6 +109,6 @@
         
     </main>
 
-    <script src="/script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
