Update loading text and add USD value calculations for daily, weekly, monthly, and yearly projections

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
         <!-- Fetching Data -->
         <div id="loading">
             <div class="spinner"></div>
-            <div id="loadingText">Fetching Current Supply...</div>
+            <div id="loadingText">Connecting Snowpeer, Fetching Data...</div>
         </div>
 
         <!--Role-->
@@ -73,7 +73,7 @@
                 <span class="result-label">Estimated Reward </span>
                 <span class="result-val"><span id="estimatedReward">0.00</span> AVAX</span>
                 <!-- Price -->
-                <div id="usdOutput" class="usd-subtext">≈ $0.00</div>
+                <div id="usdOutput" class="usd-subtext">≈ 0.00 <span>$</span></div>
             </div>
             <div class="est-reward">
                 <span class="result-label">Apr(Simple) </span>
@@ -90,18 +90,22 @@
                 <div class="proj-card">
                     <div class="proj-label">Daily</div>
                     <div class="proj-val"><span id="projDaily">0.00</span> AVAX</div>
+                    <div id="usdDaily" class="usd-subtext">≈ 0.00 <span>$</span></div>
                 </div>
                 <div class="proj-card">
                     <div class="proj-label">Weekly</div>
                     <div class="proj-val"><span id="projWeekly">0.00</span> AVAX</div>
+                    <div id="usdWeekly" class="usd-subtext">≈ 0.00 <span>$</span></div>
                 </div>
                 <div class="proj-card">
                     <div class="proj-label">Monthly</div>
                     <div class="proj-val"><span id="projMonthly">0.00</span> AVAX</div>
+                    <div id="usdMonthly" class="usd-subtext">≈ 0.00 <span>$</span></div>
                 </div>
                 <div class="proj-card">
                     <div class="proj-label">Yearly</div>
                     <div class="proj-val"><span id="projYearly">0.00</span> AVAX</div>
+                    <div id="usdYearly" class="usd-subtext">≈ 0.00 <span>$</span></div>
                 </div>
             </div>
             
